# pilock

./: README.md  db.py  package.json  pyproject.toml  templates.py
app/: controller_api.py  main.py  models.py  repository.py
app/reports/: users_with_roles.py
app/tags/: tag.py
app/ui/: tags.py  users.py
app/users/: dependencies.py  models.py  repository.py  tables.py  user.py
controller-software/: README.md  main.py  pyproject.toml  servo_lock.py
management-web-server/: .gitignore  README.md  db.py  templates.py
management-web-server/app/: main.py  models.py  repository.py
management-web-server/templates/: base.jinja
management-web-server/templates/components/: macros.jinja
management-web-server/templates/logs/: download.jinja
management-web-server/templates/tags/: create.jinja  edit.jinja  index.jinja
templates/components/: header.jinja
templates/logs/: download.jinja  index.jinja
templates/tags/: create.jinja  edit.jinja  index.jinja
templates/user_management/: create.jinja  index.jinja
