[project]
name = "advanced-programming-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "fastapi[all]>=0.118.0",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.37.0",
]
